ghc-4335c07/testsuite/tests/module/mod70.stderr

mod70.hs:3:8: error: Pattern syntax in expression context: ~1
