ghc-4335c07/testsuite/tests/module/mod70.hs
-- !!! Illegal ~ in expression
module M where
f x = x~1
